 escape quotes, unescape double escaped quotes fdo#56648

Change-Id: Id4135db2ec40865cddab533da15b2705dc7b73d5